--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,7 +5,7 @@
 }
 .Header {
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   background-image: linear-gradient(
       rgba(255, 187, 212, 0.6),
       rgba(255, 187, 212, 0.7)
@@ -100,3 +100,7 @@ button:hover {
 }
 
 /**Services */
+.services {
+  width: 300px;
+  width: 300px;
+}
