--- a/CSS/style.css
+++ b/CSS/style.css
@@ -100,7 +100,14 @@ button:hover {
 }
 
 /**Services */
-.services {
+.services .img {
   width: 300px;
-  width: 300px;
+  height: 200px;
+  padding-left: 20px;
+  display: inline-block;
+  box-sizing: border-box;
+  cursor: pointer;
+  margin: 10px 15px;
+  background-position: center;
+  background-position: center;
 }
