--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,113 +1,12 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+.card-title {
+  margin-top: 100px;
+  font-style: italic;
+  color: #ffff;
+  font-family: Cursive;
 }
-.Header {
-  width: 100%;
-  height: 80vh;
-  background-image: linear-gradient(
-      rgba(255, 187, 212, 0.6),
-      rgba(255, 187, 212, 0.7)
-    ),
-    url(background.jpg);
-  background-size: cover;
+.card-img {
+  height: 60vh;
 }
-.navbar {
-  width: 85%;
-  margin: auto;
-  padding: 35px 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.logo {
-  width: 140px;
-  height: 120px;
-  cursor: pointer;
-}
-.navbar ul li {
-  list-style: none;
-  display: inline-block;
-  margin: 0 20px;
-  position: relative;
-}
-.navbar ul li a {
-  text-decoration: none;
-  color: #2596be;
-  text-transform: uppercase;
-}
-.navbar ul li ::after {
-  content: "";
-  height: 3px;
-  width: 0;
-  background: #2596be;
-  position: absolute;
-  left: 0;
-  bottom: -10px;
-  transition: 0.5s;
-}
-.navbar ul li :hover::after {
-  width: 100%;
-}
-.content {
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  text-align: center;
-  color: #154c79;
-}
-.content h1 {
-  font-size: 60px;
-  margin-top: 80px;
-}
-.content p {
-  margin: 20px auto;
-  font-weight: 130;
-  line-height: 35px;
-}
-button {
-  width: 200px;
-  padding: 15px 0;
-  text-align: center;
-  margin: 20px 10px;
-  border-radius: 25px;
-  font-weight: bold;
-  border: 2px solid #ea7724;
-  background: transparent;
-  color: #ea7724;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-}
-span {
-  background: #fff;
-  height: 100%;
-  width: 0%;
-  border-radius: 25px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  z-index: -1;
-  transition: 0.5s;
-}
-button:hover span {
-  width: 100%;
-}
-button:hover {
-  border: none;
-}
-
-/**Services */
-.services .img {
-  width: 300px;
-  height: 200px;
-  padding-left: 20px;
-  display: inline-block;
-  box-sizing: border-box;
-  cursor: pointer;
-  margin: 10px 15px;
-  background-position: center;
-  background-position: center;
+.foodtray {
+  font-family: Cursive;
 }
